[project]
name = "refund-agent-mcp"
version = "0.1.0"
description = "Refund Agent leveraging the Portia integration with Stripe"
authors = [
    { name = "Manoj", email = "sharmalearner4@gmail.com" }
]
package-mode = false
readme = "README.md"
requires-python = ">=3.11,<3.14"


dependencies = [
    "dotenv>=0.9.9,<0.10.0",
    "portia-sdk-python[all]>=0.7.0,<0.8.0",
    "stripe>=12.0.0,<13.0.0",
    "steel-thread>=0.1.16",
    
]